--- a/package.json
+++ b/package.json
@@ -1,38 +1,40 @@
 {
-  "name": "ts-lambda-router",
-  "version": "0.14.0",
-  "license": "MIT",
+  "name": "@go-shippit/ts-lambda-router",
+  "version": "1.0.0",
+  "license": "UNLICENSED",
+  "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "bin": {
-    "ts-lambda-router-local": "bin/local"
-  },
   "files": [
-    "dist/**",
-    "bin/**"
+    "dist/**"
   ],
   "scripts": {
     "build": "rm -rf ./dist && tsc",
-    "test": "jest --collect-coverage"
-  },
-  "devDependencies": {
-    "@types/aws-lambda": "^8.10.70",
-    "@types/jest": "^26.0.23",
-    "@types/js-yaml": "^4.0.1",
-    "@types/lodash": "^4.14.170",
-    "@types/string.prototype.matchall": "^4.0.0",
-    "aws-sdk": "^2.907.0",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.2.4"
+    "test": "jest",
+    "check": "run-p check:lint check:types",
+    "check:lint": "eslint .",
+    "check:types": "tsc --noEmit"
   },
   "dependencies": {
-    "@sinclair/typebox": "^0.23.0",
-    "ajv": "^7.1.1",
-    "fp-ts": "^2.10.5",
-    "js-yaml": "^4.1.0",
+    "ajv": "^8.12.0",
+    "fp-ts": "^2.13.1",
     "lodash": "^4.17.21",
-    "string.prototype.matchall": "^4.0.4"
+    "string.prototype.matchall": "^4.0.8"
+  },
+  "devDependencies": {
+    "@go-shippit/eslint-config-lyne": "^3.3.3",
+    "@types/aws-lambda": "^8.10.111",
+    "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.14.4",
+    "@types/string.prototype.matchall": "^4.0.1",
+    "jest": "^29.4.3",
+    "npm-run-all": "^4.1.5",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
+  },
+  "peerDependencies": {
+    "@sinclair/typebox": ">= 0.25",
+    "aws-sdk": ">= 2"
   }
 }
