--- a/package.json
+++ b/package.json
@@ -17,17 +17,14 @@
   },
   "dependencies": {
     "ajv": "^8.12.0",
-    "fp-ts": "^2.13.1",
-    "lodash": "^4.17.21",
-    "string.prototype.matchall": "^4.0.8"
+    "qs": "^6.11.0"
   },
   "devDependencies": {
     "@go-shippit/eslint-config-lyne": "^3.3.3",
     "@types/aws-lambda": "^8.10.111",
     "@types/jest": "^29.4.0",
-    "@types/lodash": "^4.14.191",
     "@types/node": "^18.14.4",
-    "@types/string.prototype.matchall": "^4.0.1",
+    "@types/qs": "^6.9.7",
     "jest": "^29.4.3",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^29.0.5",
